# jupyterlab-env-sync

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  conftest.py  install.json  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  release.yml
binder/: environment.yml  postBuild
jupyter-config/server-config/: jupyterlab-env-sync.json
jupyterlab-env-sync/: __init__.py  env_store.py  handlers.py  startup_hooks.py
jupyterlab-env-sync/tests/: __init__.py  conftest.py  test_env_store.py  test_handlers.py  test_startup_hooks.py
schema/: plugin.json
src/: env_sync.ts  index.ts  kernel_inject.ts  terminal_restart.ts  tokens.ts
src/__tests__/: jupyterlab-env-sync.spec.ts
style/: base.css
ui-tests/: package-lock.json  package.json
ui-tests/tests/: jupyterlab-env-sync.spec.ts
