[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-env-sync"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jupyter_server>=2.0.1,<3",
    "jupyterlab>=4.0.0,<5",
]
dynamic = ["version", "description", "authors", "urls"]

[project.optional-dependencies]
test = ["coverage", "pytest", "pytest-asyncio", "pytest-cov", "pytest-jupyter[server]>=0.6.0"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build]
artifacts = ["jupyterlab-env-sync/labextension"]

[tool.hatch.build.targets.sdist]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel]
packages = ["jupyterlab-env-sync"]
exclude = ["jupyterlab-env-sync/labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab-env-sync/labextension" = "share/jupyter/labextensions/jupyterlab-env-sync"
"install.json" = "share/jupyter/labextensions/jupyterlab-env-sync/install.json"
"jupyter-config/server-config/jupyterlab-env-sync.json" = "etc/jupyter/jupyter_server_config.d/jupyterlab-env-sync.json"

[tool.hatch.build.hooks.version]
path = "jupyterlab-env-sync/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab-env-sync/labextension/static/style.js",
    "jupyterlab-env-sync/labextension/package.json",
]
skip-if-exists = ["jupyterlab-env-sync/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyterlab-env-sync/labextension"

[tool.pytest.ini_options]
testpaths = ["jupyterlab-env-sync/tests"]
addopts = "--import-mode=importlib"
